--- a/Frontend Mentor/Intro Component/style.css
+++ b/Frontend Mentor/Intro Component/style.css
@@ -16,10 +16,6 @@ body {
   color: #fff;
 }
 
-/*#hero {
-    //color: #fff;
-    //padding: 5.8em 1.8em 3em 1.8em;
-}*/
 h1 {
   font-weight: 600;
   font-size: 1.8em;
@@ -57,6 +53,10 @@ h1 {
   margin-bottom: 2em;
 }
 
+#signup .input-field {
+  margin-bottom: 1.2em;
+}
+
 #signup input:not([type=submit]) {
   font-family: 'Poppins', sans-serif;
   font-weight: 600;
@@ -65,7 +65,6 @@ h1 {
   color: rgba(62, 60, 73, 0.7);
   border-radius: .4em;
   padding: 1.4em;
-  margin-bottom: 1.2em;
   caret-color: #3e3c49;
 }
 
@@ -135,6 +134,16 @@ h1 {
   background-image: url(./img/icon-error.svg);
 }
 
+#signup .error-msg {
+  display: none;
+  color: rgba(255, 122, 122, 0.7);
+  text-align: right;
+  font-style: italic;
+  font-weight: 500;
+  font-size: .8em;
+  margin-top: .5em;
+}
+
 #signup label {
   border-width: 0 !important;
   clip: rect(1px, 1px, 1px, 1px) !important;
@@ -193,4 +202,89 @@ h1 {
 .attribution a {
   color: #3e52a3;
   text-decoration: none;
+}
+
+@media screen and (min-width: 1024px) {
+  /*html, body {
+        height: 100%;
+        width: 100%;
+    }*/
+  main {
+    height: 80vh;
+    width: 75vw;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+  }
+  #hero {
+    text-align: left;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding: 2em;
+  }
+  h1 {
+    margin-bottom: .6em;
+    font-size: 3.3em;
+    line-height: 1.2em;
+    font-weight: 700;
+  }
+  .blurb {
+    font-size: 1.1em;
+  }
+  .column-2 {
+    -ms-flex-item-align: center;
+        align-self: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .cta {
+    font-size: 1em;
+    padding: 1.5em;
+  }
+  #signup {
+    padding: 2.5em;
+  }
+  #signup input[type=submit] {
+    font-size: 1.1em;
+  }
+  #signup input[type=submit]:hover {
+    cursor: pointer;
+    background-color: #83ecbf;
+  }
+  #signup .TS-agreement {
+    font-size: .8em;
+  }
+  #signup-form {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    height: 95%;
+  }
 }
