--- a/Frontend Mentor/Intro Component/style.scss
+++ b/Frontend Mentor/Intro Component/style.scss
@@ -98,7 +98,7 @@ h1 {
     }
 
     .error-msg {
-       display: none;
+      // display: none;
        color: hsla(0, 100%, 74%, .7);
        text-align: right;
        font-style: italic;
