--- a/Frontend Mentor/Intro Component/style.scss
+++ b/Frontend Mentor/Intro Component/style.scss
@@ -98,7 +98,6 @@ h1 {
     }
 
     .error-msg {
-      // display: none;
        color: hsla(0, 100%, 74%, .7);
        text-align: right;
        font-style: italic;
@@ -118,7 +117,6 @@ h1 {
         width: 1px !important;
     }
 
-    
 
     input[type="submit"]{
         width: 100%;
@@ -172,16 +170,15 @@ h1 {
 
 @media screen and (min-width: 1024px){
 
-    /*html, body {
+    html, body {
         height: 100%;
         width: 100%;
-    }*/
+    }
 
     main {
         height: 80vh;
         width: 75vw;
         position: relative;
-        top: 50%;
         left: 50%;
         transform: translateX(-50%);
         display: grid;
@@ -219,11 +216,9 @@ h1 {
     }
 
     #signup {
-        //flex-grow: 1;
         padding: 2.5em;
 
         input[type=submit] {
-            //margin-bottom: 3em;
             font-size: 1.1em;
 
             &:hover {
@@ -242,7 +237,6 @@ h1 {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        height: 95%;
     }
 
    
