--- a/Frontend Mentor/Clipboard Landing Page/style.scss
+++ b/Frontend Mentor/Clipboard Landing Page/style.scss
@@ -1,6 +1,172 @@
+@import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;500;600&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
+body {
+    background: #fff url('./img/bg-header-mobile.png') no-repeat border-box;
+    font-family: 'Bai Jamjuree', sans-serif;
+    text-align: center;
+    padding: 0 9%;
+}
+
+h1, h2, h3 {
+    color: hsl(210, 10%, 33%);
+}
+
+h1 {
+    font-size: 1.9em;
+    margin-bottom: .7em;
+}
+
+h2 {
+    font-size: 1.6em;
+    margin-bottom: 1em;
+}
+
+h3 {
+    font-size: 1.4em;
+    margin-bottom: .6em;
+}
+
+p {
+    color: hsl(201, 11%, 66%);
+    font-size: 1em;
+    line-height: 1.5em;
+    margin-bottom: 3em;
+}
+
+.download-btn {
+    color: rgba(255, 255, 255, .8);
+    text-decoration: none;
+    font-size: 1.1em;
+    font-weight: 600;
+    display: block;
+    width: 100%;
+    border-radius: 3em;
+    padding: .8em 0;
+    margin-bottom: 1.2em;
+}
+
+.ios {
+    background-color: hsl(171, 66%, 44%);
+    box-shadow: 0 3px 0 hsl(171, 70%, 33%);
+}
+
+.mac {
+    background-color: hsl(233, 100%, 69%);
+    box-shadow: 0 3px 0 hsl(233, 48%, 51%);
+}
+
+#hero {
+    margin-bottom: 10em;
+    
+    .logo {
+        margin: 7em 0 4em 0;
+    }
+
+}
+
+.intro {
+    margin-bottom: 4em;
+}
+
+.features {
+    margin-bottom: 10em;
+
+    img {
+        width: 100%;
+        margin-bottom: 3em;
+    }
+}
+
+.devices {
+    margin-bottom: 6em;
+
+    img {
+        width: 100%;
+    }
+}
+
+.tools {
+    margin-bottom: 8em;
+
+    img {
+        margin-bottom: 2em;
+        
+    }
+}
+
+.brand-logos {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    row-gap: 4em;
+    margin-bottom: 10em;
+
+    img {
+        max-width: 40%;
+    }
+}
+
+.download {
+    margin-bottom: 10em;
+}
+
+footer {
+    background-color: hsla(201, 11%, 66%, .2);
+    margin: 0 -11%;
+
+    .logo {
+        width: 50px;
+        margin: 2.5em 0;
+    }
+
+    #footer-nav {
+        list-style-type: none;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        row-gap: 2em;
+        margin-bottom: 2.5em;
+        font-size: 1.2em;
+    }
+
+    a { 
+        text-decoration: none;
+        color: hsl(210, 10%, 33%);
+    }
+
+    .social-media-icons {
+        position: relative;
+        left: 50%;
+        transform: translate(-50%);
+        width: 50%;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 2em;
+
+        img {
+            max-width: 25px;
+            max-height: 25px;
+        }
+    }
+}
+ 
 .attribution { 
     font-size: 11px; 
     text-align: center; 
+    padding-bottom: 10px;
 
     a { 
         color: hsl(228, 45%, 44%); 
