--- a/Frontend Mentor/Clipboard Landing Page/style.css
+++ b/Frontend Mentor/Clipboard Landing Page/style.css
@@ -134,6 +134,7 @@ p {
 footer {
   background-color: rgba(159, 171, 178, 0.2);
   margin: 0 -11%;
+  overflow-x: hidden;
 }
 
 footer .logo {
@@ -194,4 +195,163 @@ footer .social-media-icons img {
 
 .attribution a {
   color: #3e52a3;
+}
+
+@media screen and (min-width: 1201px) {
+  body {
+    background: #fff url("./img/bg-header-desktop.png") no-repeat border-box;
+    background-size: cover;
+    padding: 0;
+  }
+  h1 {
+    font-size: 2.5em;
+  }
+  h2 {
+    font-size: 2.2em;
+  }
+  h3 {
+    font-size: 1.6em;
+  }
+  p {
+    font-size: 1.2em;
+  }
+  #hero {
+    padding: 0 30%;
+  }
+  .download-btn {
+    display: inline-block;
+    width: 26%;
+    min-width: 200px;
+  }
+  .download-btn.ios {
+    margin-right: .8em;
+  }
+  .intro {
+    padding: 0 27%;
+  }
+  .features {
+    position: relative;
+    left: -6%;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-flex: 0;
+        -ms-flex-positive: 0;
+            flex-grow: 0;
+  }
+  .features p {
+    font-size: 1em;
+  }
+  .features img {
+    margin-right: 5em;
+  }
+  .feature-list {
+    padding-right: 20%;
+    padding-bottom: 10%;
+    text-align: left;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .devices {
+    padding: 0 20%;
+  }
+  .tools {
+    margin: 0 8%;
+  }
+  .tool-list {
+    margin-bottom: 8em;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .tool {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    padding: 2%;
+  }
+  .brand-logos {
+    padding: 0 10%;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .download {
+    padding: 0 30%;
+  }
+  footer {
+    position: relative;
+    margin: 0;
+    padding: 3em 10%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-column-gap: 2em;
+            column-gap: 2em;
+  }
+  footer .logo {
+    width: 60px;
+    margin: 0;
+  }
+  footer #footer-nav {
+    text-align: left;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-bottom: 0;
+    -webkit-box-flex: 0;
+        -ms-flex-positive: 0;
+            flex-grow: 0;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    margin-right: 10em;
+  }
+  footer li {
+    -ms-flex-preferred-size: 33%;
+        flex-basis: 33%;
+  }
+  footer .social-media-icons {
+    left: 0;
+    -webkit-transform: translate(0);
+            transform: translate(0);
+    width: 12%;
+    max-width: 200px;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    margin: 0;
+  }
+  .attribution {
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    margin: 0;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+  }
 }
