--- a/Frontend Mentor/Clipboard Landing Page/style.scss
+++ b/Frontend Mentor/Clipboard Landing Page/style.scss
@@ -125,6 +125,7 @@ p {
 footer {
     background-color: hsla(201, 11%, 66%, .2);
     margin: 0 -11%;
+    overflow-x: hidden;
 
     .logo {
         width: 50px;
@@ -172,3 +173,157 @@ footer {
         color: hsl(228, 45%, 44%); 
     }
 }
+
+
+// Tablet and desktop styles
+@media screen and (min-width: 1201px) {
+
+    body {
+        background: #fff url("./img/bg-header-desktop.png") no-repeat border-box;
+        background-size: cover;
+        padding: 0;
+    }
+
+    h1 {
+        font-size: 2.5em
+    }
+
+    h2 {
+        font-size: 2.2em;
+    }
+
+    h3 {
+        font-size: 1.6em;
+    }
+
+    p {
+        font-size: 1.2em;
+    }
+
+    #hero {
+        padding: 0 30%
+    }
+
+    .download-btn {
+        display: inline-block;
+        width: 26%;
+        min-width: 200px;
+        
+        &.ios {
+            margin-right: .8em;
+        }
+    }
+
+    .intro {
+        padding: 0 27%;
+    }
+
+    .features {
+        position: relative;
+            left: -6%;
+        width: 100%;
+        display: flex;
+        flex-grow: 0;
+
+        p {
+            font-size: 1em;
+        }
+
+        img {
+            margin-right: 5em;
+        }
+    }
+
+    .feature-list {
+        padding-right: 20%;
+        padding-bottom: 10%;
+        text-align: left;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: flex-start;
+    }
+
+    .devices {
+        padding: 0 20%;
+    }
+
+    .tools {
+        margin: 0 8%;
+    }
+
+    .tool-list {
+        margin-bottom: 8em;
+        display: flex;
+    }
+
+    .tool {
+        flex: 1;
+        padding: 2%;
+    }
+
+    .brand-logos {
+        padding: 0 10%;
+        flex-direction: row;
+    }
+
+    .download {
+        padding: 0 30%;
+    }
+
+
+
+    footer {
+        position: relative;
+        margin: 0;
+        padding: 3em 10%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        column-gap: 2em;
+
+        .logo {
+            width: 60px;
+            margin: 0;
+        }
+
+        #footer-nav {
+            text-align: left;
+            flex-direction: row;
+            flex-wrap: wrap;
+            margin-bottom: 0;
+            flex-grow: 0;
+            justify-content: flex-start;
+            margin-right: 10em;
+        }
+
+        li {
+            flex-basis: 33%;
+            
+        }
+
+        .social-media-icons {
+            left: 0;
+            transform: translate(0);
+            width: 12%;
+            max-width: 200px;
+            align-self: center;
+            margin: 0;
+        }
+
+        
+    }
+
+    .attribution {
+        width: 100%;
+        text-align: center;
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        margin: 0;
+        transform: translateX(-50%);
+    }
+
+
+};
+    
