--- a/Frontend Mentor/Clipboard Landing Page/style.scss
+++ b/Frontend Mentor/Clipboard Landing Page/style.scss
@@ -211,6 +211,16 @@ footer {
         
         &.ios {
             margin-right: .8em;
+
+            &:hover {
+                background-color: hsl(171, 66%, 59%);
+                cursor: pointer;
+            }
+        }
+
+        &.mac:hover {
+            background-color: hsl(233, 89%, 75%);
+            cursor: pointer;
         }
     }
 
@@ -299,7 +309,11 @@ footer {
 
         li {
             flex-basis: 33%;
-            
+        }
+
+        a:hover {
+            cursor: pointer;
+            color: hsl(171, 66%, 44%);
         }
 
         .social-media-icons {
@@ -309,6 +323,11 @@ footer {
             max-width: 200px;
             align-self: center;
             margin: 0;
+
+            img:hover {
+                cursor: pointer;
+                filter: invert(63%) sepia(35%) saturate(837%) hue-rotate(122deg) brightness(91%) contrast(88%);
+            }
         }
 
         
