--- a/Frontend Mentor/News Homepage/style.scss
+++ b/Frontend Mentor/News Homepage/style.scss
@@ -1,9 +1,217 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html, body {
+    width: 100%;
+    height: 100%;
+    font-family: "Inter", sans-serif;
+}
+
+body {
+    padding: 5%;
+    position: relative;
+}
+
+#dark-overlay {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    background-color: hsla(240, 100%, 5%, .4);
+}
+
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 3% 0 10% 0;
+
+    #logo {
+        height: 2em;
+    }
+
+    #mobile-hamburger-icon {
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        width: 3.5em;
+        height: 1.5em;
+        background: url(/assets/img/icon-menu.svg) center center/cover;
+        cursor: pointer;
+        z-index: 11;
+
+        &:checked {
+            background: url(/assets/img/icon-menu-close.svg) center center/cover;
+            width: 2.6em;
+            height: 2em;
+        }
+
+        &:checked ~ nav {
+            right: 0;
+            transition: right 200ms ease;
+        }
+
+        &:checked + #dark-overlay {
+            display: block;
+        }
+
+    }   
+    
+    nav {
+        position: fixed;
+        background-color: white;
+        width: 70vw;
+        height: 100vh;
+        top: 0;
+        right: -100%;
+        z-index: 10;
+        transition: right 200ms ease;
+
+        ul {
+            list-style: none;
+            margin-top: 55%;
+            padding-left: 10%;
+        }
+
+        li {
+            margin-bottom: 1.6em;
+        }
+        li a {
+            text-decoration: none;
+            color: hsl(240, 100%, 5%);
+            font-size: 1.3em;
+        }
+    }
+}
+
+
+p {
+    color: hsl(236, 13%, 42%);
+    line-height: 1.6em;
+    font-size: 1em;
+}
+
+#hero {
+
+    margin-bottom: 4em;
+
+    img {
+        width: 100%;
+        margin-bottom: 1.1em;
+    }
+
+    h1 {
+        color: hsl(240, 100%, 5%);
+        font-size: 2.8em;
+        font-weight: 800;
+        line-height: 1.1em;
+        margin-bottom: .4em;
+    }
+
+    p {
+        margin-bottom: 2em;
+    }
+
+    button {
+        background-color: hsl(5, 85%, 63%);
+        padding: 1.2em 2.5em;
+        border: none;
+        cursor: pointer;
+
+        a {
+            font-family: "Inter", sans-serif;
+            font-weight: 700;
+            color: hsl(0, 0, 100%);
+            letter-spacing: .3em;
+            text-decoration: none;
+            text-transform: uppercase;
+        }
+    }
+}
+
+
+#new-articles-list {
+    display: block;
+    width: 100%;
+    padding: 8% 6%;
+    background-color: hsl(240, 100%, 5%);
+    color: hsl(0, 0, 100%);
+    margin-bottom: 4em;
+
+    h2 {
+        color: hsl(35, 77%, 62%);
+        font-size: 2em;
+        font-weight: 700;
+        margin-bottom: 1em;
+    }
+
+    .article:not(:last-child) {
+        padding-bottom: 2em;
+    }
+
+    .article + .article {
+        border-top: solid hsl(236, 13%, 42%) 1px;
+        padding-top: 2em;
+    }
+
+    .article-title {
+        font-weight: 700;
+        font-size: 1.4em;
+        margin-bottom: .8em;
+    }
+
+    li {
+        list-style: none;
+    }
+}
+
+#featured-articles {
+    .article {
+        display: flex;
+        height: 9em;
+        margin-bottom: 2.5em;
+    }
+    
+    img {
+        height: 100%;
+        padding-right: 1.2em;
+    }
+
+    .article-info {
+        padding: .5% 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 100%;
+    }
+
+    .article-number {
+        color: hsl(233, 8%, 79%);
+        font-size: 2em;
+        font-weight: 700;
+    }
+
+    .article-title {
+        font-size: 1.2em;
+        font-weight: 700;
+    }
+}
+
 
 .attribution { 
     font-size: 11px; 
     text-align: center; 
+    padding: 15px;
 
     a { 
         color: hsl(228, 45%, 44%); 
+        text-decoration: none;
     }
 }
