--- a/Frontend Mentor/News Homepage/style.css
+++ b/Frontend Mentor/News Homepage/style.css
@@ -37,7 +37,7 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 3% 0 10% 0;
+  padding: 3% 0 10% 0;
 }
 
 header #logo {
@@ -104,13 +104,25 @@ p {
   font-size: 1em;
 }
 
+#primary-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
 #hero {
   margin-bottom: 4em;
 }
 
-#hero img {
+#hero #hero-img {
   width: 100%;
+  height: 45vh;
   margin-bottom: 1.1em;
+  background: url(/assets/img/image-web-3-mobile.jpg) center center/cover no-repeat;
 }
 
 #hero h1 {
@@ -155,6 +167,10 @@ p {
   font-size: 2em;
   font-weight: 700;
   margin-bottom: 1em;
+}
+
+#new-articles-list p {
+  color: #fffdfa;
 }
 
 #new-articles-list .article:not(:last-child) {
@@ -224,4 +240,136 @@ p {
 .attribution a {
   color: #3e52a3;
   text-decoration: none;
+}
+
+@media screen and (min-width: 1200px) {
+  body {
+    padding: 2% 12%;
+  }
+  header {
+    padding-bottom: 4em;
+  }
+  header #logo {
+    height: 3em;
+  }
+  header #mobile-hamburger-icon {
+    display: none;
+  }
+  header nav {
+    position: relative;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    height: auto;
+    width: auto;
+    top: auto;
+    right: auto;
+  }
+  header nav ul {
+    margin-top: 0;
+    padding-left: 0;
+  }
+  header nav li {
+    display: inline-block;
+    margin-bottom: 0;
+    margin-left: 2em;
+  }
+  header nav li a {
+    color: #5d5f79;
+    font-size: 1em;
+  }
+  p {
+    font-size: 1.1em;
+  }
+  #primary-container {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    gap: 3%;
+    margin-bottom: 8em;
+  }
+  #hero {
+    -webkit-box-flex: 5;
+        -ms-flex: 5;
+            flex: 5;
+    margin-bottom: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #hero #hero-img {
+    height: 55%;
+    width: 100%;
+    margin: 0;
+    background: url(/assets/img/image-web-3-desktop.jpg) center center/cover no-repeat;
+    -webkit-box-flex: 2;
+        -ms-flex: 2;
+            flex: 2;
+  }
+  #hero #hero-txt-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 8%;
+    padding-top: 4%;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+  }
+  #hero h1 {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    font-size: 4em;
+    margin: 0;
+  }
+  #hero p {
+    margin: 0;
+  }
+  #hero #hero-blurb {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    height: 100%;
+  }
+  #hero button {
+    padding: 1.4em 3em;
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+  }
+  #new-articles-list {
+    -webkit-box-flex: 2;
+        -ms-flex: 2;
+            flex: 2;
+    padding: 3% 2%;
+    margin: 0;
+  }
+  #featured-articles {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-column-gap: 3%;
+            column-gap: 3%;
+    margin-bottom: 5em;
+  }
+  #featured-articles > * {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+  }
 }
