--- a/Frontend Mentor/News Homepage/style.scss
+++ b/Frontend Mentor/News Homepage/style.scss
@@ -32,7 +32,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 3% 0 10% 0;
+    padding: 3% 0 10% 0;
 
     #logo {
         height: 2em;
@@ -82,12 +82,14 @@ header {
 
         li {
             margin-bottom: 1.6em;
+
+            a {
+                text-decoration: none;
+                color: hsl(240, 100%, 5%);
+                font-size: 1.3em;
+            }
         }
-        li a {
-            text-decoration: none;
-            color: hsl(240, 100%, 5%);
-            font-size: 1.3em;
-        }
+        
     }
 }
 
@@ -98,13 +100,19 @@ p {
     font-size: 1em;
 }
 
-#hero {
+#primary-container {
+    display: flex;
+    flex-direction: column;
+}
 
+#hero {
     margin-bottom: 4em;
 
-    img {
+    #hero-img {
         width: 100%;
+        height: 45vh;
         margin-bottom: 1.1em;
+        background: url(/assets/img/image-web-3-mobile.jpg) center center/cover no-repeat;
     }
 
     h1 {
@@ -150,6 +158,10 @@ p {
         font-size: 2em;
         font-weight: 700;
         margin-bottom: 1em;
+    }
+
+    p {
+        color: hsl(36, 100%, 99%);
     }
 
     .article:not(:last-child) {
@@ -215,3 +227,126 @@ p {
         text-decoration: none;
     }
 }
+
+@media screen and (min-width: 1200px) {
+
+    body {
+        padding: 2% 12%;
+    }
+
+    header {
+
+        padding-bottom: 4em;
+
+        #logo {
+            height: 3em;
+        }
+
+        #mobile-hamburger-icon {
+            display: none;
+        }
+
+        nav {
+            position: relative;
+            align-self: center;
+            height: auto;
+            width: auto;
+            top: auto;
+            right: auto;
+
+            ul {
+                margin-top: 0;
+                padding-left: 0;
+            }
+
+            li {
+                display: inline-block;
+                margin-bottom: 0;
+                margin-left: 2em;
+
+                a {
+                    color: hsl(236, 13%, 42%);
+                    font-size: 1em;
+                }
+
+            }
+        }
+    }  
+
+    p {
+        font-size: 1.1em;
+    }
+    
+    #primary-container {
+        flex-direction: row;
+        gap: 3%;
+        margin-bottom: 8em;
+    }
+
+    #hero {
+        flex: 5;
+        margin-bottom: 0;
+        display: flex;
+        flex-direction: column;
+
+        #hero-img {
+            height: 55%;
+            width: 100%;
+            margin: 0;
+            background: url(/assets/img/image-web-3-desktop.jpg) center center/cover no-repeat;
+            flex: 2;
+        }
+
+
+        #hero-txt-container {
+            display: flex;
+            gap: 8%;
+            padding-top: 4%;  
+            flex: 1;
+        }
+
+        h1 {
+            flex: 1;
+            font-size: 4em;
+            margin: 0;
+        }
+
+        p {
+            margin: 0;
+        }
+
+        #hero-blurb {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            height: 100%;
+        }
+
+        button {
+            padding: 1.4em 3em;
+            align-self: flex-start;
+        }
+    }
+
+    #new-articles-list {
+        flex: 2;
+        padding: 3% 2%;
+        margin: 0;
+    }
+
+    #featured-articles {
+        display: flex;
+        column-gap: 3%;
+        margin-bottom: 5em;
+        
+        & > * { 
+            flex: 1; 
+        }
+
+    
+    }
+
+
+
+}    
