--- a/Frontend Mentor/News Homepage/style.css
+++ b/Frontend Mentor/News Homepage/style.css
@@ -278,6 +278,9 @@ p {
     color: #5d5f79;
     font-size: 1em;
   }
+  header nav li a:hover {
+    color: #f15e50;
+  }
   p {
     font-size: 1.1em;
   }
@@ -352,12 +355,19 @@ p {
     -ms-flex-item-align: start;
         align-self: flex-start;
   }
+  #hero button:hover {
+    background-color: #00001a;
+  }
   #new-articles-list {
     -webkit-box-flex: 2;
         -ms-flex: 2;
             flex: 2;
     padding: 3% 2%;
     margin: 0;
+  }
+  #new-articles-list .article-title:hover {
+    color: #e9ab53;
+    cursor: pointer;
   }
   #featured-articles {
     display: -webkit-box;
@@ -371,5 +381,9 @@ p {
     -webkit-box-flex: 1;
         -ms-flex: 1;
             flex: 1;
+  }
+  #featured-articles .article-title:hover {
+    color: #f15e50;
+    cursor: pointer;
   }
 }
