--- a/Frontend Mentor/News Homepage/style.scss
+++ b/Frontend Mentor/News Homepage/style.scss
@@ -267,6 +267,10 @@ p {
                 a {
                     color: hsl(236, 13%, 42%);
                     font-size: 1em;
+
+                    &:hover {
+                        color: hsl(5, 85%, 63%);
+                    }
                 }
 
             }
@@ -326,6 +330,10 @@ p {
         button {
             padding: 1.4em 3em;
             align-self: flex-start;
+
+            &:hover {
+                background-color: hsl(240, 100%, 5%); 
+            }
         }
     }
 
@@ -333,6 +341,11 @@ p {
         flex: 2;
         padding: 3% 2%;
         margin: 0;
+
+        .article-title:hover {
+            color: hsl(35, 77%, 62%);
+            cursor: pointer;
+        }
     }
 
     #featured-articles {
@@ -342,6 +355,11 @@ p {
         
         & > * { 
             flex: 1; 
+        }
+
+        .article-title:hover {
+            color: hsl(5, 85%, 63%);
+            cursor: pointer;
         }
 
     
