--- a/Frontend Mentor/Contact Form/style.css
+++ b/Frontend Mentor/Contact Form/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -7,7 +8,128 @@
 
 html, body {
   width: 100%;
-  height: 100%;
+}
+
+body {
+  background-color: #dff1e7;
+  font-family: "Karla", sans-serif;
+  color: #2b4246;
+  padding: 5%;
+}
+
+#form-container {
+  background-color: #fff;
+  border-radius: .8em;
+  padding: 6%;
+  margin-bottom: 1em;
+}
+
+h1 {
+  margin-bottom: 1.1em;
+}
+
+form {
+  font-size: .9em;
+  display: -ms-grid;
+  display: grid;
+}
+
+form label {
+  display: inline-block;
+  margin-bottom: .8em;
+}
+
+.bordered {
+  display: block;
+  border: solid 1px rgba(43, 66, 70, 0.5);
+  border-radius: .5em;
+  width: 100%;
+  height: 3em;
+}
+
+input {
+  margin-bottom: .8em;
+}
+
+.multi-field-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.field {
+  margin-bottom: .8em;
+}
+
+.input-label-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.message {
+  height: 20em;
+}
+
+fieldset {
+  border: none;
+  margin-bottom: .8em;
+}
+
+fieldset legend {
+  margin-bottom: .8em;
+}
+
+fieldset input, fieldset label {
+  margin-bottom: 0;
+}
+
+fieldset label {
+  margin-left: .8em;
+}
+
+input[type=radio] {
+  margin-left: 1.5em;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  height: 1.2em;
+  width: 1.2em;
+  border: 1px solid rgba(135, 163, 166, 0.5);
+  border-radius: 50%;
+}
+
+input[type=checkbox] {
+  margin-right: .8em;
+}
+
+.required::after {
+  content: '*';
+  color: #0c7d69;
+  margin-left: .3em;
+}
+
+input[type=submit] {
+  background-color: #0c7d69;
+  border: none;
+  border-radius: .5em;
+  width: 100%;
+  height: 3.2em;
+  color: #fff;
+  font-size: 1.2em;
+  font-weight: 400;
+  letter-spacing: .05em;
+}
+
+.error-msg {
+  color: #d94545;
 }
 
 .attribution {
@@ -17,4 +139,5 @@ html, body {
 
 .attribution a {
   color: #3e52a3;
+  text-decoration: none;
 }
