--- a/Frontend Mentor/Contact Form/style.scss
+++ b/Frontend Mentor/Contact Form/style.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -6,14 +8,130 @@
 
 html, body {
     width: 100%;
-    height: 100%;
 }
+
+body {
+    background-color: hsl(148, 38%, 91%);
+    font-family: "Karla", sans-serif;
+    color: hsl(187, 24%, 22%);
+    padding: 5%;
+
+}
+
+#form-container {
+    background-color: #fff;
+    border-radius: .8em;
+    padding: 6%;
+    margin-bottom: 1em;
+}
+
+h1 {
+    margin-bottom: 1.1em;
+}
+
+form {
+    font-size: .9em;
+    display: grid;
+
+    label {
+        display: inline-block;
+        margin-bottom: .8em;
+    } 
+}
+
+.bordered {
+    display: block;
+    border: solid 1px hsla(187, 24%, 22%, .5);
+    border-radius: .5em;
+    width: 100%;
+    height: 3em;
+}
+
+input {
+    margin-bottom: .8em;
+}
+
+.multi-field-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.field {
+    margin-bottom: .8em;
+}
+
+.input-label-group {
+    display: flex;
+    align-items: center;
+}
+
+.message {
+    height: 20em;
+}
+
+fieldset {
+    border: none;
+    margin-bottom: .8em;
+
+    legend {
+        margin-bottom: .8em;
+    }
+
+    input, label {
+        margin-bottom: 0;
+    }
+
+    label {
+        margin-left: .8em;
+    }
+
+  
+}
+
+input[type=radio] {
+    margin-left: 1.5em;
+    appearance: none;
+    height: 1.2em;
+    width: 1.2em;
+    border: 1px solid hsla(186, 15%, 59%, .5);
+    border-radius: 50%;
+}
+
+input[type=checkbox] {
+    margin-right: .8em;
+}
+
+.required::after {
+    content: '*';
+    color: hsl(169, 82%, 27%);
+    margin-left: .3em;
+}
+
+
+input[type=submit] {
+    background-color: hsl(169, 82%, 27%);
+    border: none;
+    border-radius: .5em;
+    width: 100%;
+    height: 3.2em;
+    color: #fff;
+    font-size: 1.2em;
+    font-weight: 400;
+    letter-spacing: .05em;
+}
+
+.error-msg {
+    color: hsl(0, 66%, 56%);
+}
+
+
 
 .attribution { 
     font-size: 11px; text-align: center; 
 
     a { 
         color: hsl(228, 45%, 44%); 
+        text-decoration: none;
     }    
 }
     
