--- a/Frontend Mentor/Contact Form/style.css
+++ b/Frontend Mentor/Contact Form/style.css
@@ -44,11 +44,14 @@ form label {
   border: solid 1px rgba(43, 66, 70, 0.5);
   border-radius: .5em;
   width: 100%;
-  height: 3em;
+  height: 3.5em;
+  padding: .8em;
+  margin-bottom: .8em;
 }
 
-input {
-  margin-bottom: .8em;
+.bordered:focus, .bordered:hover {
+  outline: none;
+  border: solid 1px #0c7d69;
 }
 
 .multi-field-container {
@@ -74,8 +77,16 @@ input {
           align-items: center;
 }
 
+.consent {
+  margin: 2em 0 3em 0;
+}
+
+.consent label {
+  margin: 0;
+}
+
 .message {
-  height: 20em;
+  height: initial;
 }
 
 fieldset {
@@ -95,19 +106,77 @@ fieldset label {
   margin-left: .8em;
 }
 
+fieldset .error-msg {
+  margin: 0;
+}
+
+input {
+  color: #2b4246;
+}
+
 input[type=radio] {
-  margin-left: 1.5em;
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
+  display: -ms-grid;
+  display: grid;
+  place-content: center;
+  margin-left: 1em;
   height: 1.2em;
   width: 1.2em;
   border: 1px solid rgba(135, 163, 166, 0.5);
   border-radius: 50%;
 }
 
+input[type=radio]:checked {
+  border: 2px solid #0c7d69;
+}
+
+input[type=radio]:checked::before {
+  display: block;
+  content: '';
+  height: .6em;
+  width: .6em;
+  border-radius: 50%;
+  -webkit-box-shadow: inset 1em 1em #0c7d69;
+          box-shadow: inset 1em 1em #0c7d69;
+}
+
 input[type=checkbox] {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  position: relative;
   margin-right: .8em;
+  display: -ms-grid;
+  display: grid;
+  place-content: center;
+  height: 1em;
+  width: 1em;
+  border: 1px solid rgba(43, 66, 70, 0.6);
+  border-radius: .1em;
+}
+
+input[type=checkbox]:checked {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+
+input[type=checkbox]:checked::before {
+  position: absolute;
+  content: '';
+  background: url(/assets/images/icon-checkbox-check.svg) center/cover no-repeat;
+  height: 1em;
+  width: 1em;
+  top: -1px;
+  left: -1px;
+}
+
+textarea {
+  font-family: "Karla", sans-serif;
+  color: #2b4246;
+  resize: vertical;
 }
 
 .required::after {
@@ -128,8 +197,18 @@ input[type=submit] {
   letter-spacing: .05em;
 }
 
+input[type=submit]:hover {
+  background-color: #0a3d36;
+}
+
 .error-msg {
+  display: none;
   color: #d94545;
+  margin-top: .8em;
+}
+
+#success-msg {
+  display: none;
 }
 
 .attribution {
