--- a/Frontend Mentor/Contact Form/style.scss
+++ b/Frontend Mentor/Contact Form/style.scss
@@ -15,7 +15,6 @@ body {
     font-family: "Karla", sans-serif;
     color: hsl(187, 24%, 22%);
     padding: 5%;
-
 }
 
 #form-container {
@@ -44,11 +43,15 @@ form {
     border: solid 1px hsla(187, 24%, 22%, .5);
     border-radius: .5em;
     width: 100%;
-    height: 3em;
-}
-
-input {
+    height: 3.5em;
+    padding: .8em;
     margin-bottom: .8em;
+
+    &:focus, &:hover {
+        outline: none;
+        border: solid 1px hsl(169, 82%, 27%);
+    }
+    
 }
 
 .multi-field-container {
@@ -65,8 +68,16 @@ input {
     align-items: center;
 }
 
+.consent  {
+    margin: 2em 0 3em 0;
+
+    label {
+        margin: 0;
+    }
+}
+
 .message {
-    height: 20em;
+    height: initial;
 }
 
 fieldset {
@@ -85,20 +96,70 @@ fieldset {
         margin-left: .8em;
     }
 
-  
+    .error-msg {
+        margin: 0;
+    }
+}
+
+input {
+    color: hsl(187, 24%, 22%);
 }
 
 input[type=radio] {
-    margin-left: 1.5em;
     appearance: none;
+    display: grid;
+    place-content: center;
+    margin-left: 1em;
     height: 1.2em;
     width: 1.2em;
     border: 1px solid hsla(186, 15%, 59%, .5);
     border-radius: 50%;
+
+    &:checked {
+        border: 2px solid hsl(169, 82%, 27%);
+    }
+
+    &:checked::before {
+        display: block;
+        content: '';
+        height: .6em;
+        width: .6em;
+        border-radius: 50%;
+        box-shadow: inset 1em 1em hsl(169, 82%, 27%);
+    }
 }
 
+
 input[type=checkbox] {
+    appearance: none;
+    position: relative;
     margin-right: .8em;
+    display: grid;
+    place-content: center;
+    height: 1em;
+    width: 1em;
+    border: 1px solid hsla(187, 24%, 22%, .6);
+    border-radius: .1em;
+
+    &:checked {
+        appearance: none;
+
+        &::before {
+            position: absolute;
+            content: '';
+            background: url(/assets/images/icon-checkbox-check.svg) center/cover no-repeat;
+            height: 1em;
+            width: 1em;
+            top: -1px;
+            left: -1px;
+        }
+    }
+}
+
+textarea {
+    font-family: "Karla", sans-serif;
+    color: hsl(187, 24%, 22%);
+    resize: vertical;
 }
 
 .required::after {
@@ -118,10 +179,20 @@ input[type=submit] {
     font-size: 1.2em;
     font-weight: 400;
     letter-spacing: .05em;
+
+    &:hover {
+        background-color: hsl(171, 72%, 14%);
+    }
 }
 
 .error-msg {
+    display: none;
     color: hsl(0, 66%, 56%);
+    margin-top: .8em;
+}
+
+#success-msg {
+    display: none;
 }
 
 
